<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="calcula">Calcular IMC</string>
    <string name="pesoet">Introduce tu peso</string>
    <string name="estaturaet">Introduce tu estatura</string>
    <string name="estado">Estado</string>
    <string name="resultado">Resultado</string>
</resources>