<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEstatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="49dp"
        android:text="@string/estatura"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_x="120dp"
        android:layout_y="182dp"
        android:text="@string/peso"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.443"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="431dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_x="122dp"
        android:layout_y="504dp"
        android:text="@string/estado"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="63dp"
        android:layout_y="106dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/estaturaet"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteLayoutX="85dp"
        tools:layout_editor_absoluteLayoutY="104dp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="63dp"
        android:layout_y="240dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/pesoet"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteLayoutX="85dp"
        tools:layout_editor_absoluteLayoutY="104dp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="277dp" />

    <Button
        android:id="@+id/btnCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="107dp"
        android:layout_y="330dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/calcula"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="364dp" />

</androidx.constraintlayout.widget.ConstraintLayout>